@@ -138,6 +138,7 @@ echo '### Loading 100/leibniz.ml'; echo 'loadt "100/leibniz.ml";;' | (time $holl
 echo '### Loading 100/lhopital.ml'; echo 'loadt "100/lhopital.ml";;' | (time $hollight)
 echo '### Loading 100/liouville.ml'; echo 'loadt "100/liouville.ml";;' | (time $hollight)
 echo '### Loading 100/minkowski.ml'; echo 'loadt "100/minkowski.ml";;' | (time $hollight)
+echo '### Loading 100/morley.ml'; echo 'loadt "100/morley.ml";;' | (time $hollight)
 echo '### Loading 100/pascal.ml'; echo 'loadt "100/pascal.ml";;' | (time $hollight)
 echo '### Loading 100/perfect.ml'; echo 'loadt "100/perfect.ml";;' | (time $hollight)
 echo '### Loading 100/pick.ml'; echo 'loadt "100/pick.ml";;' | (time $hollight)
